enabled `wireguard` kernel module for all devices
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -5,6 +5,7 @@ OMNECT_KERNEL_SRC_URI = " \
     file://disable-kvm.cfg \
     file://docker.cfg \
     file://lxc.cfg \
+    file://wireguard.cfg \
 "
 
 # enforce identical kernel config independent of meta-virtualization
