--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -30,6 +30,7 @@ LAYERSERIES_COMPAT_omnect = "kirkstone"
 LAYERDIR_omnect = "${LAYERDIR}"
 
 # orchestrate other layers (we ensure our layer is latest when building with kas)
-# if you don't use kas, you should ensure meta-omnect is behind meta-phytec in BBLAYERS.
+# if you don't use kas, you should ensure meta-omnect is behind meta-phytec resp. meta-welotec-bsp in BBLAYERS.
 BBFILE_PRIORITY_phytec = "9"
 BBFILE_PRIORITY_raspberrypi="9"
+BBFILE_PRIORITY_welotec-bsp-layer = "9"
