BREAKING CHANGE: support gpt partition layout for rpi4 and tauri-l devices
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/raspberrypi3.extra.conf
+++ b/conf/machine/raspberrypi3.extra.conf
@@ -1,4 +1,7 @@
 require conf/machine/include/rpi.inc
 
+# wic: how to partition
+WKS_FILE = "omnect-os.rpi3.wks.in"
+
 # u-boot boot cmd config vars
 UBOOT_ARCH="arm"
