--- a/conf/machine/raspberrypi4-64.extra.conf
+++ b/conf/machine/raspberrypi4-64.extra.conf
@@ -1,5 +1,8 @@
 require conf/machine/include/rpi.inc
 
+# wic: how to partition
+WKS_FILE = "omnect-os.rpi4.wks.in"
+
 # Currently we set this for all rpi devices anyway, but for rpi4 it is
 # explicitly necessary.
 # https://github.com/agherzan/meta-raspberrypi/pull/733
