--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -53,6 +53,8 @@ WICVARS:append = " OMNECT_PART_SIZE_FACTORY"
 WICVARS:append = " OMNECT_PART_SIZE_CERT"
 WICVARS:append = " OMNECT_PART_SIZE_ETC"
 WICVARS:append = " OMNECT_PART_SIZE_DATA"
+WICVARS:append = " OMNECT_PART_OFFSET_UBOOT_ENV1"
+WICVARS:append = " OMNECT_PART_OFFSET_UBOOT_ENV2"
 
 # location of u-boot environment areas in KiB
 #   - Fixed addresses are used (--offset in WKS file), suitable for u-boot configuration.
