--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -1,17 +1,21 @@
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-welotec"
+PREFERRED_PROVIDER_virtual/kernel = "linux-welotec"
 
 # initramfs type
 OMNECT_INITRAMFS_FSTYPE = "cpio.gz"
+
+# wic: how to partition
+WKS_FILE = "omnect-os.eg500.wks.in"
 
 # unset welotec's defaults
 INITRAMFS_IMAGE = ""
 INITRAMFS_IMAGE_BUNDLE = ""
 INITRAMFS_MAXSIZE = ""
 
-# @todo remove me when solved where ee-acpi-scripts is located
-#MACHINE_EXTRA_RRECOMMENDS:remove = "eee-acpi-scripts"
+# we use libubootenv but not u-boot for this device
+DEPENDS:remove:pn-libubootenv = "u-boot-default-script"
 
-# @todo why do we have to explicitly unset this here?
-# even if swupdates defconfig doesn't include "CONFIG_UBOOT=y" it
-# depends on libubootenv until we clear PREFERRED_PROVIDER_u-boot-fw-utils
-PREFERRED_PROVIDER_u-boot-fw-utils = ""
+# don't install every available firmware
+MACHINE_EXTRA_RRECOMMENDS:remove = "linux-firmware"
+
+# @todo remove me when solved where ee-acpi-scripts is located
+MACHINE_EXTRA_RRECOMMENDS:remove = "eee-acpi-scripts"
