--- a/conf/distro/omnect-os.conf
+++ b/conf/distro/omnect-os.conf
@@ -7,3 +7,4 @@ require conf/distro/include/omnect-os-user_classes.conf
 require conf/distro/include/omnect-os-kernel.conf
 require conf/distro/include/omnect-os-rust.conf
 require conf/distro/include/omnect-os-swupdate.conf
+require conf/distro/include/omnect-os-tpm.conf
