--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -121,6 +121,7 @@ OMNECT_DEVEL_TOOLS_DEFAULT = "\
     sysstat \
     systemd-analyze \
     tcpdump \
+    tpm2-tools \
     valgrind \
     e2fsprogs e2fsprogs-tune2fs \
     jq \
