wic image with grub boot fix; tpm2 support; moving of initrd stuff to recipes-omnect
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -14,6 +14,8 @@ INITRAMFS_MAXSIZE = ""
 # we use libubootenv but not u-boot for this device
 DEPENDS:remove:pn-libubootenv = "u-boot-default-script"
 
+MACHINE_FEATURES += "tpm2"
+
 # don't install every available firmware
 MACHINE_EXTRA_RRECOMMENDS:remove = "linux-firmware"
 
