--- a/wic/omnect-os.eg500.wks.in
+++ b/wic/omnect-os.eg500.wks.in
@@ -3,4 +3,4 @@ part --fixed-size ${OMNECT_PART_SIZE_BOOT}K --source bootimg-efi --sourceparams=
 
 include omnect-os.common.wks.inc
 
-bootloader --ptable gpt --configfile ${LAYERDIR_omnect}/files/grub-usb.cfg
+bootloader --ptable gpt --configfile ${LAYERDIR_omnect}/recipes-omnect/grub-cfg/grub-cfg/grub-usb.cfg
