--- a/conf/tpm-cfg.conf
+++ b/conf/tpm-cfg.conf
@@ -1,1 +1,4 @@
 CORE_IMAGE_EXTRA_INSTALL += "tpm-udev"
+DISTRO_FEATURES += "tpm2"
+OMNECT_DEVEL_TOOLS_DEFAULT += "tpm2-tools"
+EXTRA_OECONF:append:pn-tpm2-tss = " --disable-weakcrypto --enable-debug=info"
