- grubenv handling (switch rootA vs rootB) - iot-hub-device-update swupdate script - don't install kernel into /boot - network handling in systemd-networkd-wait-online
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/kas/distro/poky.yaml
+++ b/kas/distro/poky.yaml
@@ -13,3 +13,7 @@ repos:
       meta:
       meta-poky:
       meta-yocto-bsp:
+    patches:
+      p001:
+        repo: "meta-omnect"
+        path: "kas/patches/poky_bootimg_efi_wic.patch"
