--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -6,6 +6,13 @@ OMNECT_INITRAMFS_FSTYPE = "cpio.gz"
 # wic: how to partition
 WKS_FILE = "omnect-os.eg500.wks.in"
 
+# where to find initial grubenv
+WICVARS:append = " OMNECT_GRUBENV_FILE"
+OMNECT_GRUBENV_FILE = "${LAYERDIR_omnect}/files/grubenv"
+
+# don't create grub-efi in rootfs
+EFI_PROVIDER = " "
+
 # unset welotec's defaults
 INITRAMFS_IMAGE = ""
 INITRAMFS_IMAGE_BUNDLE = ""
@@ -13,6 +20,11 @@ INITRAMFS_MAXSIZE = ""
 
 # we use libubootenv but not u-boot for this device
 DEPENDS:remove:pn-libubootenv = "u-boot-default-script"
+
+# ethernet device name
+OMNECT_ETH0 = "enp1s0"
+OMNECT_ETH1 = "enp2s0"
+OMNECT_ETH2 = "enp3s0"
 
 MACHINE_FEATURES += "tpm2"
 
