--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -27,6 +27,7 @@ OMNECT_ETH1 = "enp2s0"
 OMNECT_ETH2 = "enp3s0"
 
 MACHINE_FEATURES += "tpm2"
+MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
 
 # don't install every available firmware
 MACHINE_EXTRA_RRECOMMENDS:remove = "linux-firmware"
