--- a/recipes-omnect/grub-cfg/grub-cfg/grub-usb.cfg
+++ b/recipes-omnect/grub-cfg/grub-cfg/grub-usb.cfg
@@ -4,6 +4,6 @@ timeout=2
 
 menuentry 'omnect-os'{
 set root=(hd0,gpt2)
-linux /boot/bzImage rootwait root=/dev/sda2 console=tty0
+linux /boot/bzImage rootwait root=/dev/sda2 console=tty0 console=ttyS0,115200n8
 initrd /boot/initramfs.cpio.gz
 }
