--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -26,6 +26,20 @@ OMNECT_ETH0 = "enp1s0"
 OMNECT_ETH1 = "enp2s0"
 OMNECT_ETH2 = "enp3s0"
 
+# remove distro features we don't support
+DISTRO_FEATURES:remove = " \
+    3g \
+    alsa \
+    bluetooth \
+    nfc \
+    opengl \
+    pulseaudio \
+    x11 \
+    vulkan \
+    wayland \
+    wifi \
+"
+
 MACHINE_FEATURES += "tpm2"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
 
