eg500: add efibootmgr to OMNECT_DEVEL_TOOLS_DEFAULT
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -40,6 +40,8 @@ DISTRO_FEATURES:remove = " \
     wifi \
 "
 
+OMNECT_DEVEL_TOOLS_DEFAULT += "efibootmgr"
+
 MACHINE_FEATURES += "tpm2"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
 
