--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -40,7 +40,7 @@ DISTRO_FEATURES:remove = " \
     wifi \
 "
 
-OMNECT_DEVEL_TOOLS_DEFAULT += "efibootmgr"
+OMNECT_DEVEL_TOOLS_DEFAULT:append = " efibootmgr"
 
 MACHINE_FEATURES += "tpm2"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
