--- a/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service.conf
+++ b/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service.conf
@@ -1,29 +1,29 @@
-z ${sysconfdir}/aziot 0775 root aziot -
-z ${sysconfdir}/aziot/config.toml 0664 root aziot -
+z /etc/aziot 0775 root aziot -
+z /etc/aziot/config.toml 0664 root aziot -
 
-z ${sysconfdir}/aziot/certd 0750 root aziotcs -
-z ${sysconfdir}/aziot/certd/config.d 0700 aziotcs aziotcs -
-Z ${sysconfdir}/aziot/certd/config.d/\*.toml 0600 aziotcs aziotcs -
-d ${localstatedir}/lib/aziot/certd 0700 aziotcs aziotcs -
-d ${localstatedir}/lib/aziot/certd/certs 0700 aziotcs aziotcs -
-Z ${localstatedir}/lib/aziot/certd/certs/\*.cer 0600 aziotcs aziotcs -
+z /etc/aziot/certd 0750 root aziotcs -
+z /etc/aziot/certd/config.d 0700 aziotcs aziotcs -
+Z /etc/aziot/certd/config.d/\*.toml 0600 aziotcs aziotcs -
+d /var/lib/aziot/certd 0700 aziotcs aziotcs -
+d /var/lib/aziot/certd/certs 0700 aziotcs aziotcs -
+Z /var/lib/aziot/certd/certs/\*.cer 0600 aziotcs aziotcs -
 
-z ${sysconfdir}/aziot/identityd 0750 root aziotid -
-z ${sysconfdir}/aziot/identityd/config.d 0700 aziotid aziotid -
-Z ${sysconfdir}/aziot/identityd/config.d/\*.toml 0600 aziotid aziotid -
-d ${localstatedir}/lib/aziot/identityd 0700 aziotid aziotid -
-d ${localstatedir}/lib/aziot/identityd/device_info 0700 aziotid aziotid -
-d ${localstatedir}/lib/aziot/identityd/modules 0700 aziotid aziotid -
-d ${localstatedir}/lib/aziot/identityd/prev_state 0700 aziotid aziotid -
+z /etc/aziot/identityd 0750 root aziotid -
+z /etc/aziot/identityd/config.d 0700 aziotid aziotid -
+Z /etc/aziot/identityd/config.d/\*.toml 0600 aziotid aziotid -
+d /var/lib/aziot/identityd 0700 aziotid aziotid -
+d /var/lib/aziot/identityd/device_info 0700 aziotid aziotid -
+d /var/lib/aziot/identityd/modules 0700 aziotid aziotid -
+d /var/lib/aziot/identityd/prev_state 0700 aziotid aziotid -
 
-z ${sysconfdir}/aziot/keyd 0750 root aziotks -
-z ${sysconfdir}/aziot/keyd/config.d 0700 aziotks aziotks -
-Z ${sysconfdir}/aziot/keyd/config.d/\*.toml 0600 aziotks aziotks -
-d ${localstatedir}/lib/aziot/keyd 0700 aziotks aziotks -
-d ${localstatedir}/lib/aziot/keyd/keys 0700 aziotks aziotks -
-Z ${localstatedir}/lib/aziot/keyd/keys/\*.key 0600 aziotks aziotks -
+z /etc/aziot/keyd 0750 root aziotks -
+z /etc/aziot/keyd/config.d 0700 aziotks aziotks -
+Z /etc/aziot/keyd/config.d/\*.toml 0600 aziotks aziotks -
+d /var/lib/aziot/keyd 0700 aziotks aziotks -
+d /var/lib/aziot/keyd/keys 0700 aziotks aziotks -
+Z /var/lib/aziot/keyd/keys/\*.key 0600 aziotks aziotks -
 
-z ${sysconfdir}/aziot/tpmd 0750 root aziottpm -
-z ${sysconfdir}/aziot/tpmd/config.d 0700 aziottpm aziottpm -
-Z ${sysconfdir}/aziot/tpmd/config.d/\*.toml 0600 aziottpm aziottpm -
-d ${localstatedir}/lib/aziot/tpmd 0700 aziottpm aziottpm -
+z /etc/aziot/tpmd 0750 root aziottpm -
+z /etc/aziot/tpmd/config.d 0700 aziottpm aziottpm -
+Z /etc/aziot/tpmd/config.d/\*.toml 0600 aziottpm aziottpm -
+d /var/lib/aziot/tpmd 0700 aziottpm aziottpm -
