--- a/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service.conf
+++ b/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service.conf
@@ -5,22 +5,22 @@ z /etc/aziot/certd 0750 root aziotcs -
 z /etc/aziot/certd/config.d 0700 aziotcs aziotcs -
 Z /etc/aziot/certd/config.d/\*.toml 0600 aziotcs aziotcs -
 d /var/lib/aziot/certd 0700 aziotcs aziotcs -
-d /var/lib/aziot/certd/certs 0700 aziotcs aziotcs -
+d /var/lib/aziot/certd/certs 0755 aziotcs aziotcs -
 Z /var/lib/aziot/certd/certs/\*.cer 0600 aziotcs aziotcs -
 
 z /etc/aziot/identityd 0750 root aziotid -
 z /etc/aziot/identityd/config.d 0700 aziotid aziotid -
 Z /etc/aziot/identityd/config.d/\*.toml 0600 aziotid aziotid -
 d /var/lib/aziot/identityd 0700 aziotid aziotid -
-d /var/lib/aziot/identityd/device_info 0700 aziotid aziotid -
-d /var/lib/aziot/identityd/modules 0700 aziotid aziotid -
-d /var/lib/aziot/identityd/prev_state 0700 aziotid aziotid -
+d /var/lib/aziot/identityd/modules 0755 aziotid aziotid -
+z /var/lib/aziot/identityd/device_info 0664 aziotid aziotid -
+z /var/lib/aziot/identityd/prev_state 0664 aziotid aziotid -
 
 z /etc/aziot/keyd 0750 root aziotks -
 z /etc/aziot/keyd/config.d 0700 aziotks aziotks -
 Z /etc/aziot/keyd/config.d/\*.toml 0600 aziotks aziotks -
 d /var/lib/aziot/keyd 0700 aziotks aziotks -
-d /var/lib/aziot/keyd/keys 0700 aziotks aziotks -
+d /var/lib/aziot/keyd/keys 0755 aziotks aziotks -
 Z /var/lib/aziot/keyd/keys/\*.key 0600 aziotks aziotks -
 
 z /etc/aziot/tpmd 0750 root aziottpm -
