iptables: added default firewall configuration depending on Developer/Release build
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/omnect-os.conf
+++ b/conf/distro/omnect-os.conf
@@ -7,3 +7,6 @@ require conf/distro/include/omnect-os-user_classes.conf
 require conf/distro/include/omnect-os-kernel.conf
 require conf/distro/include/omnect-os-rust.conf
 require conf/distro/include/omnect-os-swupdate.conf
+
+OMNECT_RELEASE_IMAGE ?= "0"
+require ${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', 'conf/distro/include/omnect-os-release.conf', 'conf/distro/include/omnect-os-dev.conf', d)}
