- kernel/iptables: added common kernel nftables confguration fragment   (fixed iptables apply on tauri)
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -4,6 +4,7 @@ OMNECT_KERNEL_SRC_URI = " \
     file://enable-overlayfs.cfg \
     file://disable-kvm.cfg \
     file://docker.cfg \
+    file://nftables.cfg \
     file://lxc.cfg \
     file://wireguard.cfg \
 "
