--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -4,8 +4,8 @@ OMNECT_KERNEL_SRC_URI = " \
     file://enable-overlayfs.cfg \
     file://disable-kvm.cfg \
     file://docker.cfg \
-    file://nftables.cfg \
     file://lxc.cfg \
+    file://netfilter.cfg \
     file://wireguard.cfg \
 "
 
