--- a/kas/feature/flash-mode-2.yaml
+++ b/kas/feature/flash-mode-2.yaml
@@ -4,5 +4,5 @@ header:
   version: 10
 
 local_conf_header:
-  meta-omnect_feature_flash-mode: |
-    DISTRO_FEATURES:append = " flash-mode"
+  meta-omnect_feature_flash-mode-2: |
+    DISTRO_FEATURES:append = " flash-mode-2"
