iot-identity-service-precondition: set service type to "exec"
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service-precondition.service
+++ b/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service-precondition.service
@@ -3,7 +3,7 @@ Description=iot identity precondition
 Before=aziot-identityd.service
 
 [Service]
-Type=simple
+Type=exec
 ExecStart=@@AZIOTCLI@@ config apply
 RemainAfterExit=true
 
