u-boot/kernel: kernel boot is quiet on consoles for release builds
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-release.conf
+++ b/conf/distro/include/omnect-os-release.conf
@@ -1,4 +1,11 @@
 FILESEXTRAPATHS:prepend:pn-iptables := "${LAYERDIR_omnect}/files/release:"
 
 # disable getty on serial console
-SERIAL_CONSOLES=""
+SERIAL_CONSOLES = ""
+
+# kernel log quiet on console
+#
+# https://docs.yoctoproject.org/4.0.6/singleindex.html#term-APPEND
+# the manual says it is a grub-efi specific var, but it is also used in the
+# syslinux.bbclass. so we use it in our case for u-boot.
+APPEND += "quiet"
