initramfs: install debug module for non-release builds
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-release.conf
+++ b/conf/distro/include/omnect-os-release.conf
@@ -1,3 +1,4 @@
+# use special release iptables config
 FILESEXTRAPATHS:prepend:pn-iptables := "${LAYERDIR_omnect}/files/release:"
 
 # disable getty on serial console
