iot-identity-service-precondition: synchronized startup with iotedge (fixes race with aziot-edged reading the configuration via aziot-identityd)
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service-precondition.service
+++ b/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service-precondition.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=iot identity precondition
-Before=aziot-identityd.service
+Before=aziot-identityd.service aziot-edged.service aziot-keyd.service aziot-certd.service
 
 [Service]
 Type=exec
