--- a/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service-precondition.service
+++ b/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service-precondition.service
@@ -1,6 +1,10 @@
 [Unit]
 Description=iot identity precondition
-Before=aziot-identityd.service aziot-edged.service aziot-keyd.service aziot-certd.service
+Before=aziot-identityd.service \
+    aziot-edged.service \
+    aziot-keyd.service \
+    aziot-certd.service \
+    aziot-tpmd.service
 
 [Service]
 Type=exec
