--- a/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service-precondition.service
+++ b/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service-precondition.service
@@ -5,6 +5,8 @@ Before=aziot-identityd.service aziot-edged.service aziot-keyd.service aziot-cert
 [Service]
 Type=exec
 ExecStart=@@AZIOTCLI@@ config apply
+Restart=on-failure
+RestartSec=60
 RemainAfterExit=true
 
 [Install]
