disable auto getty
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-release.conf
+++ b/conf/distro/include/omnect-os-release.conf
@@ -9,4 +9,4 @@ SERIAL_CONSOLES = ""
 # https://docs.yoctoproject.org/4.0.6/singleindex.html#term-APPEND
 # the manual says it is a grub-efi specific var, but it is also used in the
 # syslinux.bbclass. so we use it in our case for u-boot.
-APPEND += "quiet loglevel=2"
+APPEND += "quiet loglevel=2 systemd.getty_auto=false"
