--- a/conf/distro/include/omnect-os-release.conf
+++ b/conf/distro/include/omnect-os-release.conf
@@ -4,9 +4,11 @@ FILESEXTRAPATHS:prepend:pn-iptables := "${LAYERDIR_omnect}/files/release:"
 # disable getty on serial console
 SERIAL_CONSOLES = ""
 
-# kernel log quiet on console
-#
 # https://docs.yoctoproject.org/4.0.6/singleindex.html#term-APPEND
 # the manual says it is a grub-efi specific var, but it is also used in the
 # syslinux.bbclass. so we use it in our case for u-boot.
-APPEND += "quiet loglevel=2 systemd.getty_auto=false"
+#
+# kernel log quiet on console except loglevel critical and above
+APPEND += "quiet loglevel=2"
+# systemd.getty_auto=false -> https://www.freedesktop.org/software/systemd/man/systemd-getty-generator.html
+APPEND += "systemd.getty_auto=false"
