iot-identity-precondition-service: - changed type to "oneshot" to ensure follow up units   get startet after the process exits and not as soon `execve` is started - changed wantedby dependency to basic.target
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service-precondition.service
+++ b/recipes-azure-iot/iot-identity-service/iot-identity-service/iot-identity-service-precondition.service
@@ -7,11 +7,11 @@ Before=aziot-identityd.service \
     aziot-tpmd.service
 
 [Service]
-Type=exec
+Type=oneshot
 ExecStart=@@AZIOTCLI@@ config apply
 Restart=on-failure
 RestartSec=5
 RemainAfterExit=true
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=basic.target
