Clean-up tools list (PBI 24575)
Tools to be installed for image flavors dev and prod shall differ in
that most of the tools that support development shall not be part of
production images.

This change introduces variable OMNECT_TOOLS to hold any (OS) tools that
shall be available in any image type, i.e. also production images.

Quite like OMNECT_DEVEL_TOOLS it also has a counterpart in distro
configuration file omnect-os-distro.conf: OMNECT_TOOLS_DEFAULT which
defines standard tools as desired for image builds in case there is no
explicit definition of OMNECT_TOOLS.
This is quite similar to OMNECT_DEVEL_TOOLS handling in the past.

Consequently - and consistently - OMNECT_TOOLS is also introduced to kas
configuration file omnect-os.yaml, again as empty string.

Variables OMNECT_DEVEL_TOOLS[_DEFAULT] remain there and contain all
extra utilities a developer would want/need for development of new
features.

Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -105,23 +105,28 @@ SYSTEMD_SERVICE:remove:pn-busybox-syslog = "file://busybox-syslog.service"
 
 # define default devel tools to be included in image
 OMNECT_DEVEL_TOOLS_DEFAULT = "\
+    coreutils \
     curl \
+    e2fsprogs \
+    e2fsprogs-tune2fs \
     ethtool \
     gdbserver \
     htop \
+    jq \
     ldd \
     lshw \
     lsof \
     ltrace \
     mmc-utils \
-    parted \
+    procps \
     screen \
-    smartmontools \
     strace \
     sysstat \
-    systemd-analyze \
     tcpdump \
     valgrind \
-    e2fsprogs e2fsprogs-tune2fs \
-    jq \
 "
+
+OMNECT_TOOLS_DEFAULT = "\
+    parted \
+    smartmontools \
+ "
