--- a/kas/distro/omnect-os.yaml
+++ b/kas/distro/omnect-os.yaml
@@ -87,6 +87,9 @@ env:
   SWUPDATE_PRIVATE_KEY: "SWUPDATE_PRIVATE_KEY_NOT_SET"
   SWUPDATE_PASSWORD_FILE: "SWUPDATE_PASSWORD_FILE_NOT_SET"
 
+  # general tools used by omnect
+  OMNECT_TOOLS: ""
+
   # omnect development tools
   OMNECT_DEVEL_TOOLS: ""
 
