fallback handling for A/B updates
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/deviceupdate-agent.service
+++ b/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/deviceupdate-agent.service
@@ -3,6 +3,8 @@ Description=Device Update Agent daemon.
 After=network-online.target deliveryoptimization-agent.service systemd-tmpfiles-setup.service aziot-identityd.service time-sync.target
 Wants=network-online.target deliveryoptimization-agent.service aziot-identityd.service
 
+ConditionPathExists=!/run/omnect-device-service/omnect_validate_update
+
 StartLimitBurst=10
 StartLimitIntervalSec=120
 
