iot-hub-device-update: added "compatibilityId" to "additionalDeviceProperties" in du-config.json

--- a/kas/distro/omnect-os.yaml
+++ b/kas/distro/omnect-os.yaml
@@ -78,6 +78,7 @@ env:
   # iot-hub-device-update
   ADU_DEVICEPROPERTIES_MANUFACTURER: "ADU_DEVICEPROPERTIES_MANUFACTURER_NOT_SET"
   ADU_DEVICEPROPERTIES_MODEL: "ADU_DEVICEPROPERTIES_MODEL_NOT_SET"
+  ADU_DEVICEPROPERTIES_COMPATIBILITY_ID: "ADU_DEVICEPROPERTIES_COMPATIBILITY_ID_NOT_SET"
   ADU_MANUFACTURER: "ADU_MANUFACTURER_NOT_SET"
   ADU_MODEL: "ADU_MODEL_NOT_SET"
   ADU_GROUP: "ADU_GROUP_NOT_SET"
