refactored omnect-device-service and adu permissions
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -4,6 +4,7 @@ DISTROOVERRIDES = "poky:omnect-os"
 # DISTRO_VERSION is POKY_VERSION (since we include poky conf before our own
 # distro settings) appended with a build number.
 DISTRO_VERSION:append = ".${OMNECT_BUILD_NUMBER}"
+DISTRO_FEATURES += "polkit"
 TARGET_VENDOR = "-omnect"
 
 # Systemd
