kernel: add support for CIFS
Using a Samba share for storing data from a running device could be
handsome, so add support for CIFS to kernel configuration.

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -2,6 +2,7 @@
 # - we disable kvm (e.g. set by linux-imx)
 OMNECT_KERNEL_SRC_URI = " \
     file://enable-overlayfs.cfg \
+    file://enable-cifs.cfg \
     file://disable-kvm.cfg \
     file://docker.cfg \
     file://lxc.cfg \
