u-boot env lock works
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/recipes-bsp/u-boot/u-boot/lock-env.cfg
+++ b/recipes-bsp/u-boot/u-boot/lock-env.cfg
@@ -1,1 +1,5 @@
+CONFIG_ENV_IS_NOWHERE=y
+CONFIG_DELAY_ENVIRONMENT=y
+CONFIG_ENV_APPEND=y
 CONFIG_ENV_WRITEABLE_LIST=y
+CONFIG_ENV_ACCESS_IGNORE_FORCE=y
