kernel: enabled vcan, vxcan as modules if MACHINE_FEATURES contains can
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -8,6 +8,7 @@ OMNECT_KERNEL_SRC_URI = " \
     file://lxc.cfg \
     file://netfilter.cfg \
     file://wireguard.cfg \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
 "
 
 # enforce identical kernel config independent of meta-virtualization
