--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -39,7 +39,7 @@ KERNEL_DEVICETREE_FN = "imx8mm-phygate-tauri.dtb"
 
 # ethernet device name
 OMNECT_ETH0 = "eth0"
-OMNECT_ETH1 = "enp1s0"
+OMNECT_ETH1 = "eth1"
 
 # TODO clarify with upstream
 # this is not set in meta-phytec, copied it from meta-phytec polis config
