Make 3g an omnect distro feature
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -5,6 +5,7 @@ DISTROOVERRIDES = "poky:omnect-os"
 # distro settings) appended with a build number.
 DISTRO_VERSION:append = ".${OMNECT_BUILD_NUMBER}"
 DISTRO_FEATURES += "polkit"
+DISTRO_FEATURES += "3g"
 TARGET_VENDOR = "-omnect"
 
 # Systemd
