NetworkManager.conf: ensure that only cellular interfaces are targeted
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/recipes-connectivity/networkmanager/files/NetworkManager.conf
+++ b/recipes-connectivity/networkmanager/files/NetworkManager.conf
@@ -5,4 +5,5 @@ autoconnect-retries-default=0
 hostname-mode=none
 
 [keyfile]
-unmanaged-devices=interface-name:eth*;interface-name:docker*;interface-name:can*;interface-name:wg*;interface-name:br*;type:veth
+unmanaged-devices=except:interface-name:wwan*,except:interface-name:cdc-wdm*
+#unmanaged-devices=interface-name:eth*;interface-name:docker*;interface-name:can*;interface-name:wg*;interface-name:br*;type:veth
