Add missing kernel drivers for LTE modules
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -6,7 +6,10 @@ OMNECT_KERNEL_SRC_URI = " \
     file://disable-kvm.cfg \
     file://docker.cfg \
     file://lxc.cfg \
+    file://mbim.cfg \
     file://netfilter.cfg \
+    file://qualcomm.cfg \
+    file://sierra.cfg \
     file://wireguard.cfg \
     ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
 "
