--- a/recipes-omnect/grub-cfg/grub-cfg/grub.cfg.in
+++ b/recipes-omnect/grub-cfg/grub-cfg/grub.cfg.in
@@ -5,7 +5,29 @@ load_env
 
 if [ "x${omnect_os_boot}" = "x" ]; then
   set omnect_os_boot="omnect-os-rootA"
+  save_env omnect_os_boot
 fi
+
+if [ "x${omnect_validate_update}" = "x" ]; then
+  if [ "x${omnect_validate_update_part} = "x" ]; then
+    echo 'Normal boot - booting from partition ${omnect_os_boot}'
+  else
+    echo 'Update in progress - booting from partition ${omnect_validate_update_part}'
+    set omnect_validate_update=1
+    save_env omnect_validate_update
+    set omnect_os_boot=${omnect_validate_update_part}
+    # no save_env omnect_os_boot here!
+  fi
+else
+  echo 'Update validation failed - booting from partition ${omnect_os_boot}'
+  set omnect_validate_update_part=
+  save_env omnect_validate_update_part
+  set omnect_validate_update=
+  save_env omnect_validate_update
+  set omnect_validate_update_failed=1
+  save_env omnect_validate_update_failed
+fi
+
 set default="${omnect_os_boot}"
 
 menuentry 'omnect-os-rootA'{
