--- a/recipes-omnect/grub-cfg/grub-cfg/grub.cfg.in
+++ b/recipes-omnect/grub-cfg/grub-cfg/grub.cfg.in
@@ -1,4 +1,3 @@
-serial --unit=0 --speed=115200 --word=8 --parity=no --stop=1
 timeout=2
 
 load_env
@@ -32,12 +31,12 @@ set default="${omnect_os_boot}"
 
 menuentry 'omnect-os-rootA'{
     set root=(hd0,gpt2)
-    linux /boot/bzImage rootwait root=@@ROOT_DEVICE@@2 console=tty0 console=ttyS0,115200n8
+    linux /boot/bzImage rootwait root=@@ROOT_DEVICE@@2 console=tty0
     initrd /boot/initramfs.cpio.gz
 }
 
 menuentry 'omnect-os-rootB'{
     set root=(hd0,gpt3)
-    linux /boot/bzImage rootwait root=@@ROOT_DEVICE@@3 console=tty0 console=ttyS0,115200n8
+    linux /boot/bzImage rootwait root=@@ROOT_DEVICE@@3 console=tty0
     initrd /boot/initramfs.cpio.gz
 }
