--- a/recipes-omnect/grub-cfg/grub-cfg/grub.cfg.in
+++ b/recipes-omnect/grub-cfg/grub-cfg/grub.cfg.in
@@ -2,14 +2,14 @@ timeout=2
 
 load_env
 
-if [ "x${omnect_os_boot}" = "x" ]; then
+if [ "x${omnect_os_bootpart}" = "x" ]; then
   set omnect_os_boot="omnect-os-rootA"
   save_env omnect_os_boot
 fi
 
 if [ "x${omnect_validate_update}" = "x" ]; then
   if [ "x${omnect_validate_update_part}" = "x" ]; then
-    echo 'Normal boot - booting from partition ${omnect_os_boot}'
+    echo 'Normal boot - booting from partition ${omnect_os_bootpart}'
   else
     echo 'Update in progress - booting from partition ${omnect_validate_update_part}'
     set omnect_validate_update=1
@@ -18,7 +18,7 @@ if [ "x${omnect_validate_update}" = "x" ]; then
     # no save_env omnect_os_boot here!
   fi
 else
-  echo 'Update validation failed - booting from partition ${omnect_os_boot}'
+  echo 'Update validation failed - booting from partition ${omnect_os_bootpart}'
   set omnect_validate_update_part=
   save_env omnect_validate_update_part
   set omnect_validate_update=
@@ -27,7 +27,7 @@ else
   save_env omnect_validate_update_failed
 fi
 
-set default="${omnect_os_boot}"
+set default="${omnect_os_bootpart}"
 
 menuentry 'omnect-os-rootA'{
     set root=(hd0,gpt2)
