ADU_DEVICEPROPERTIES_COMPATIBILITY_ID
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -13,6 +13,9 @@ OMNECT_GRUBENV_FILE = "${LAYERDIR_omnect}/files/grubenv"
 # don't create grub-efi in rootfs
 EFI_PROVIDER = " "
 
+# adu compabilitly id
+ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = 0
+
 # unset welotec's defaults
 INITRAMFS_IMAGE = ""
 INITRAMFS_IMAGE_BUNDLE = ""
@@ -39,8 +42,6 @@ DISTRO_FEATURES:remove = " \
     wayland \
     wifi \
 "
-
-OMNECT_DEVEL_TOOLS_DEFAULT:append = " efibootmgr"
 
 MACHINE_FEATURES += "tpm2"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
