--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -1,5 +1,8 @@
 require conf/machine/include/phytec-imx8mm.inc
 
+# adu compabilitly id
+ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = 0
+
 # remove machine features the hardware doesn't provide per se
 MACHINE_FEATURES:remove = " \
     3g \
