ADU_DEVICEPROPERTIES_COMPATIBILITY_ID
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -14,7 +14,7 @@ OMNECT_GRUBENV_FILE = "${LAYERDIR_omnect}/files/grubenv"
 EFI_PROVIDER = " "
 
 # adu compabilitly id
-ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = 0
+ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
 
 # unset welotec's defaults
 INITRAMFS_IMAGE = ""
