--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -1,7 +1,7 @@
 require conf/machine/include/phytec-imx8mm.inc
 
 # adu compabilitly id
-ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = 0
+ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
 
 # since we do install a lot of dev packages in OMNECT_DEVEL_TOOLS_DEFAULT
 # and do not fit in IMAGE_ROOTFS_MAXSIZE, we have to tune the overhead factor
