--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -1,7 +1,7 @@
 require conf/machine/include/phytec-imx8mm.inc
 
 # adu compabilitly id
-ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = 0
+ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "1"
 
 # remove machine features the hardware doesn't provide per se
 MACHINE_FEATURES:remove = " \
