--- a/conf/machine/raspberrypi3.extra.conf
+++ b/conf/machine/raspberrypi3.extra.conf
@@ -1,7 +1,7 @@
 require conf/machine/include/rpi.inc
 
 # adu compabilitly id
-ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = 0
+ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
 
 # wic: how to partition
 WKS_FILE = "omnect-os.rpi3.wks.in"
