omnect-os-image: rework of tools handling
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -105,7 +105,7 @@ SRC_URI:append:pn-busybox = " \
 SYSTEMD_SERVICE:remove:pn-busybox-syslog = "file://busybox-syslog.service"
 
 # define default devel tools to be included in image
-OMNECT_DEVEL_TOOLS_DEFAULT = "\
+OMNECT_DEVEL_TOOLS = "\
     curl \
     e2fsprogs \
     ethtool \
@@ -124,9 +124,3 @@ OMNECT_DEVEL_TOOLS_DEFAULT = "\
     tcpdump \
     valgrind \
 "
-
-OMNECT_TOOLS_DEFAULT = "\
-    e2fsprogs-tune2fs \
-    jq \
-    smartmontools \
- "
