--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -13,7 +13,7 @@ OMNECT_GRUBENV_FILE = "${LAYERDIR_omnect}/files/grubenv"
 # don't create grub-efi in rootfs
 EFI_PROVIDER = " "
 
-# adu compabilitly id
+# adu combability id
 ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
 
 # unset welotec's defaults
@@ -49,5 +49,5 @@ MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
 # don't install every available firmware
 MACHINE_EXTRA_RRECOMMENDS:remove = "linux-firmware"
 
-# @todo remove me when solved where ee-acpi-scripts is located
+# @todo remove me when solved where eee-acpi-scripts is located
 MACHINE_EXTRA_RRECOMMENDS:remove = "eee-acpi-scripts"
