--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -1,6 +1,6 @@
 require conf/machine/include/phytec-imx8mm.inc
 
-# adu compabilitly id
+# adu combability id
 ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
 
 # since we do install a lot of dev packages in OMNECT_DEVEL_TOOLS_DEFAULT
