--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -1,6 +1,6 @@
 require conf/machine/include/phytec-imx8mm.inc
 
-# adu compabilitly id
+# adu combability id
 ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "1"
 
 # remove machine features the hardware doesn't provide per se
