--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -13,7 +13,7 @@ OMNECT_GRUBENV_FILE = "${LAYERDIR_omnect}/files/grubenv"
 # don't create grub-efi in rootfs
 EFI_PROVIDER = " "
 
-# adu combability id
+# adu compatibility id
 ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
 
 # unset welotec's defaults
