--- a/conf/machine/raspberrypi3.extra.conf
+++ b/conf/machine/raspberrypi3.extra.conf
@@ -1,6 +1,6 @@
 require conf/machine/include/rpi.inc
 
-# adu combability id
+# adu compatibility id
 ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
 
 # wic: how to partition
