fixed tauri boot
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -42,6 +42,8 @@ DISTRO_FEATURES:remove = " \
     wayland \
     wifi \
 "
+# this machine uses grub
+MACHINEOVERRIDES:append = ":omnect_grub"
 
 MACHINE_FEATURES += "tpm2"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
