Fix tpm2-tools inclusion, pt. 2
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -123,4 +123,5 @@ OMNECT_DEVEL_TOOLS = "\
     sysstat \
     tcpdump \
     valgrind \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'tpm2', 'tpm2-tools', '', d)} \
 "
