phyboard-polis-imx8mm-4: replace OMNECT_DEVEL_TOOLS_DEFAULT with OMNECT_DEVEL_TOOLS
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -1,6 +1,6 @@
 require conf/machine/include/phytec-imx8mm.inc
 
-# since we do install a lot of dev packages in OMNECT_DEVEL_TOOLS_DEFAULT
+# since we do install a lot of dev packages in OMNECT_DEVEL_TOOLS
 # and do not fit in IMAGE_ROOTFS_MAXSIZE, we have to tune the overhead factor
 # of the readonly rootfs.
 # - applies to kirkstone but not e.g. dunfell
