--- a/conf/machine/raspberrypi3.extra.conf
+++ b/conf/machine/raspberrypi3.extra.conf
@@ -1,5 +1,8 @@
 require conf/machine/include/rpi.inc
 
+# adu compatibility id
+ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
+
 # wic: how to partition
 WKS_FILE = "omnect-os.rpi3.wks.in"
 
