--- a/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/du-config.json
+++ b/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/du-config.json
@@ -1,23 +1,26 @@
 {
-    "schemaVersion": "1.1",
-    "aduShellTrustedUsers": [
-      "adu",
-      "do"
-    ],
-    "iotHubProtocol": "mqtt",
-    "compatPropertyNames":"manufacturer,model",
-    "manufacturer": "",
-    "model": "",
-    "agents": [
-      {
-        "name": "AducIotAgent",
-        "runas": "adu",
-        "connectionSource": {
-          "connectionType": "AIS",
-          "connectionData": ""
-        },
-        "manufacturer": "",
-        "model": ""
+  "schemaVersion": "1.1",
+  "aduShellTrustedUsers": [
+    "adu",
+    "do"
+  ],
+  "iotHubProtocol": "mqtt",
+  "compatPropertyNames":"manufacturer,model,compatibilityid",
+  "manufacturer": "",
+  "model": "",
+  "agents": [
+    {
+      "name": "AducIotAgent",
+      "runas": "adu",
+      "connectionSource": {
+        "connectionType": "AIS",
+        "connectionData": ""
+      },
+      "manufacturer": "",
+      "model": "",
+      "additionalDeviceProperties": {
+        "compatibilityid": ""
       }
-    ]
-  }
+    }
+  ]
+}
