omnect-os-distro.conf: remove 3g and add OMNECT_ONLINE_INTERFACES handling
Distro feature 3g is no longer available everywhere because modularity
was abandoned in favor of well-defined products which either do or don't
have this capabilities by design.

Apart from that define OMNEC_ONLINE_INTERFACES depending on distro
features which affects WLAN as ell as WWAN interfaces.

Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -5,7 +5,6 @@ DISTROOVERRIDES = "poky:omnect-os"
 # distro settings) appended with a build number.
 DISTRO_VERSION:append = ".${OMNECT_BUILD_NUMBER}"
 DISTRO_FEATURES += "polkit"
-DISTRO_FEATURES += "3g"
 TARGET_VENDOR = "-omnect"
 
 # Systemd
@@ -31,6 +30,10 @@ IMAGE_FSTYPES = "ext4.gz wic.xz wic.bmap"
 IMAGE_BOOT_FILES:remove = "uImage Image"
 # instead of kernel we want the initramfs bundled kernel
 IMAGE_INSTALL:remove = "kernel"
+
+# extend online interfaces according to set features
+OMNECT_ONLINE_INTERFACES:append = "${@bb.utils.contains('DISTRO_FEATURES', 'wifi', ':${OMNECT_WLAN0}', '', d)}"
+OMNECT_ONLINE_INTERFACES:append = "${@bb.utils.contains('DISTRO_FEATURES', '3g', ':${OMNECT_WWAN0}', '', d)}"
 
 # define partition (default) sizes in KiB
 #     Note, the last data partition will be expanded during the first boot after image flashing inside the INITRAMFS.
