machine extra conf: for test purposes add LTE for tauri and rpi4
Moreover, define OMNECT_WWAN0 to be available in omnect-os-distro.conf
to be added to online interfaces definition.

Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/raspberrypi4-64.extra.conf
+++ b/conf/machine/raspberrypi4-64.extra.conf
@@ -1,5 +1,8 @@
 require conf/machine/include/rpi.inc
 
+# FIXME: just for testing purposes, remove before merging!
+DISTRO_FEATURES:append = " 3g"
+
 # adu compatibility id
 ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "2"
 
@@ -9,7 +12,7 @@ WKS_FILE = "omnect-os.rpi4.wks.in"
 # u-boot boot cmd config vars
 UBOOT_ARCH = "arm64"
 
-# LTE modem
-OMNECT_WWAN0 = "wwan0"
+OMNECT_ONLINE_INTERFACES = "${OMNECT_ETH0}"
 
-OMNECT_ONLINE_INTERFACES = "${OMNECT_ETH0}:${OMNECT_WWAN0}"
+# FIXME: just for testing purposes, remove before merging!
+OMNECT_WWAN0 = "wwan0"
