--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -38,14 +38,15 @@ OMNECT_ONLINE_INTERFACES:append = "${@bb.utils.contains('DISTRO_FEATURES', '3g',
 # define partition (default) sizes in KiB
 #     Note, the last data partition will be expanded during the first boot after image flashing inside the INITRAMFS.
 #     This means, OMNECT_PART_SIZE_DATA is the initial value.
-#     Note, when using kas/feature/omnect-os-common.yaml the values configured there will override values here.
-OMNECT_PART_SIZE_BOOT ?= "40960"
-OMNECT_PART_SIZE_UBOOT_ENV ?= "64"
-OMNECT_PART_SIZE_ROOTFS ?= "900000"
-OMNECT_PART_SIZE_FACTORY ?= "40960"
-OMNECT_PART_SIZE_CERT ?= "40960"
-OMNECT_PART_SIZE_ETC ?= "40960"
-OMNECT_PART_SIZE_DATA ?= "524288"
+#     Note, machine configurations can override these values.
+#     Note, when using kas/feature/omnect-os-common.yaml the values configured there will override values here (or set in macine configuration).
+OMNECT_PART_SIZE_BOOT      ??= "40960"
+OMNECT_PART_SIZE_UBOOT_ENV ??= "64"
+OMNECT_PART_SIZE_ROOTFS    ??= "900000"
+OMNECT_PART_SIZE_FACTORY   ??= "40960"
+OMNECT_PART_SIZE_CERT      ??= "40960"
+OMNECT_PART_SIZE_ETC       ??= "40960"
+OMNECT_PART_SIZE_DATA      ??= "524288"
 
 # setup OOM behaviour
 OMNECT_VM_PANIC_ON_OOM ?= "0"
