--- a/conf/machine/rpi4-test.extra.conf
+++ b/conf/machine/rpi4-test.extra.conf
@@ -1,7 +1,7 @@
 require conf/machine/include/rpi.inc
 
 # FIXME: just for testing purposes, remove before merging!
-DISTRO_FEATURES:append = " 3g"
+DISTRO_FEATURES:append = " 3g tpm2"
 
 # adu compatibility id
 ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "2"
