--- a/conf/machine/rpi4-test.extra.conf
+++ b/conf/machine/rpi4-test.extra.conf
@@ -2,6 +2,7 @@ require conf/machine/include/rpi.inc
 
 # FIXME: just for testing purposes, remove before merging!
 DISTRO_FEATURES:append = " 3g tpm2"
+MACHINE_FEATURES:append = " 3g"
 
 # adu compatibility id
 ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "2"
@@ -11,6 +12,8 @@ WKS_FILE = "omnect-os.rpi4.wks.in"
 
 # u-boot boot cmd config vars
 UBOOT_ARCH = "arm64"
+
+OMNECT_PART_SIZE_ROOTFS    ?= "900000"
 
 OMNECT_ONLINE_INTERFACES = "${OMNECT_ETH0}"
 
