rpi4-test.extra.conf: add tpm2 to MACHINE_FEATURES
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/rpi4-test.extra.conf
+++ b/conf/machine/rpi4-test.extra.conf
@@ -2,7 +2,7 @@ require conf/machine/include/rpi.inc
 
 # FIXME: just for testing purposes, remove before merging!
 DISTRO_FEATURES:append = " 3g tpm2"
-MACHINE_FEATURES:append = " 3g"
+MACHINE_FEATURES:append = " 3g tpm2"
 
 # adu compatibility id
 ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "2"
