distro: omnect-os-kernel.conf: add wwan kernel config snippets only for 3g enabled distro
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -1,16 +1,20 @@
 # - we enable overlayfs for all kernels (dependency of our partition layout)
 # - we disable kvm (e.g. set by linux-imx)
+OMNECT_KERNEL_SRC_URI_LTE = " \
+    file://mbim.cfg \
+    file://qualcomm.cfg \
+    file://sierra.cfg \
+"
+
 OMNECT_KERNEL_SRC_URI = " \
     file://enable-overlayfs.cfg \
     file://enable-cifs.cfg \
     file://disable-kvm.cfg \
     file://docker.cfg \
     file://lxc.cfg \
-    file://mbim.cfg \
     file://netfilter.cfg \
-    file://qualcomm.cfg \
-    file://sierra.cfg \
     file://wireguard.cfg \
+    ${@bb.utils.contains('MACHINE_FEATURES', '3g', '${OMNECT_KERNEL_SRC_URI_LTE}', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
 "
 
