--- a/conf/machine/rpi4-test.conf
+++ b/conf/machine/rpi4-test.conf
@@ -1,2 +1,26 @@
+# this is an artificial omnect product for testing purposes of features like
+# LTE or TPM which is basically a plain Raspberrypi 4 with a USB LTE modem and
+# a TPM module
+
 require conf/machine/raspberrypi4-64.conf
 require conf/machine/raspberrypi4-64.tpm.conf
+
+require conf/machine/include/rpi.inc
+
+DISTRO_FEATURES:append = " 3g tpm2"
+MACHINE_FEATURES:append = " 3g tpm2"
+
+# adu compatibility id
+ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "2"
+
+# wic: how to partition
+WKS_FILE = "omnect-os.rpi4.wks.in"
+
+# u-boot boot cmd config vars
+UBOOT_ARCH = "arm64"
+
+OMNECT_PART_SIZE_ROOTFS    ?= "900000"
+
+OMNECT_ONLINE_INTERFACES = "${OMNECT_ETH0}"
+
+OMNECT_WWAN0 = "wwan0"
