--- a/kas/distro/omnect-os.yaml
+++ b/kas/distro/omnect-os.yaml
@@ -9,7 +9,8 @@ repos:
   meta-omnect:
   ext/meta-openembedded:
     url: "https://github.com/openembedded/meta-openembedded.git"
-    refspec: 529620141e773080a6a7be4615fb7993204af883
+    branch: kirkstone
+    commit: 529620141e773080a6a7be4615fb7993204af883
     layers:
       meta-filesystems:
       meta-networking:
@@ -19,15 +20,18 @@ repos:
   # to build iot-identity-service
   ext/meta-security:
     url: "https://git.yoctoproject.org/meta-security"
-    refspec: 06c240c3c235fa06fe724e278d53463ac67cc26b
+    branch: kirkstone
+    commit: 06c240c3c235fa06fe724e278d53463ac67cc26b
     layers:
       meta-tpm:
   ext/meta-swupdate:
     url: "https://github.com/sbabic/meta-swupdate.git"
-    refspec: 7a85c71f40c4bf445f041fa7aad70733c9cbc0ba
+    branch: kirkstone
+    commit: 7a85c71f40c4bf445f041fa7aad70733c9cbc0ba
   ext/meta-virtualization:
     url: "https://git.yoctoproject.org/meta-virtualization"
-    refspec: e60f59f3567b78286ea34337dbae468a5f18f1c6
+    branch: kirkstone
+    commit: e60f59f3567b78286ea34337dbae468a5f18f1c6
     patches:
       p001:
         repo: "meta-omnect"
