--- a/kas/machine/rpi/rpi.yaml
+++ b/kas/machine/rpi/rpi.yaml
@@ -6,4 +6,5 @@ header:
 repos:
   ext/meta-raspberrypi:
     url: "https://github.com/agherzan/meta-raspberrypi.git"
-    refspec: 80a12f7fddfeae28c43242765374e7ade3a2a59e
+    branch: kirkstone
+    commit: 80a12f7fddfeae28c43242765374e7ade3a2a59e
