linux-welotec eg500: compile network driver into kernel
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -20,6 +20,8 @@ BBFILES_DYNAMIC += "\
     virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*.bbappend \
     virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*/*.bb \
     virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*/*.bbappend \
+    welotec-bsp-layer:${LAYERDIR}/dynamic-layers/welotec-bsp-layer/recipes-*/*/*.bb \
+    welotec-bsp-layer:${LAYERDIR}/dynamic-layers/welotec-bsp-layer/recipes-*/*/*.bbappend \
 "
 BBFILE_COLLECTIONS += "omnect"
 BBFILE_PATTERN_omnect = "^${LAYERDIR}/"
